@startuml Facade

title Facade Pattern — DuplicateCheckFacade

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam packageStyle rectangle

' ── Facade interface ───────────────────────────────────────────
interface IDuplicateCheckFacade <<interface>> {
  + CheckAsync(filePath : string, cancellationToken : CancellationToken) : Task<DuplicateCheckResult>
  + RegisterUploadedAsync(checkResult : DuplicateCheckResult, fileName : string, uploadedByTelegramId : long, cancellationToken : CancellationToken) : Task
}

' ── Facade implementation ──────────────────────────────────────
class DuplicateCheckFacade {
  - _fingerprintProviders : IReadOnlyList<IAudioFingerprintProvider>
  - _repository : IDuplicateFingerprintRepository
  + DuplicateCheckFacade(fingerprintProviders : IEnumerable<IAudioFingerprintProvider>, repository : IDuplicateFingerprintRepository)
  + CheckAsync(filePath : string, cancellationToken : CancellationToken) : Task<DuplicateCheckResult>
  + RegisterUploadedAsync(checkResult : DuplicateCheckResult, fileName : string, uploadedByTelegramId : long, cancellationToken : CancellationToken) : Task
}

' ── Subsystem components ───────────────────────────────────────
interface IAudioFingerprintProvider <<interface>> {
  + CreateFingerprintAsync(filePath : string, cancellationToken : CancellationToken) : Task<AudioFingerprint>
}

interface IDuplicateFingerprintRepository <<interface>> {
  + ExistsAsync(fingerprint : string, cancellationToken : CancellationToken) : Task<bool>
  + AddUploadedEntryAsync(fingerprint : string, fileName : string, providerName : string, uploadedByTelegramId : long, cancellationToken : CancellationToken) : Task
}

class FfmpegFingerprintProvider {
  + CreateFingerprintAsync(filePath : string, cancellationToken : CancellationToken) : Task<AudioFingerprint>
}

class ExternalFingerprintApiAdapter {
  + CreateFingerprintAsync(filePath : string, cancellationToken : CancellationToken) : Task<AudioFingerprint>
}

class SqliteDuplicateFingerprintRepository {
  + ExistsAsync(fingerprint : string, cancellationToken : CancellationToken) : Task<bool>
  + AddUploadedEntryAsync(fingerprint : string, fileName : string, providerName : string, uploadedByTelegramId : long, cancellationToken : CancellationToken) : Task
}

' ── Value types ────────────────────────────────────────────────
class AudioFingerprint <<record>> {
  + Value : string
  + ProviderName : string
}

class DuplicateCheckResult <<record>> {
  + IsDuplicate : bool
  + Fingerprint : AudioFingerprint
}

' ── Client ─────────────────────────────────────────────────────
class SingleAudioUploadCommand {
  - _duplicateCheckFacade : IDuplicateCheckFacade
}

' Relationships
DuplicateCheckFacade ..|> IDuplicateCheckFacade : realizes

FfmpegFingerprintProvider ..|> IAudioFingerprintProvider : realizes
ExternalFingerprintApiAdapter ..|> IAudioFingerprintProvider : realizes
SqliteDuplicateFingerprintRepository ..|> IDuplicateFingerprintRepository : realizes

' Facade aggregates subsystem components
DuplicateCheckFacade o--> "0..*" IAudioFingerprintProvider : _fingerprintProviders
DuplicateCheckFacade --> "1" IDuplicateFingerprintRepository : _repository

' Value dependencies
DuplicateCheckFacade ..> DuplicateCheckResult : «creates»
DuplicateCheckResult *--> "1" AudioFingerprint : Fingerprint

' Client depends only on facade interface
SingleAudioUploadCommand --> IDuplicateCheckFacade : uses

note top of DuplicateCheckFacade
  Facade
  Single entry point for the
  entire duplicate-checking subsystem.
  Hides provider iteration,
  fingerprint creation, and
  repository persistence from clients.
end note

note bottom of SingleAudioUploadCommand
  Client
  Knows only IDuplicateCheckFacade;
  unaware of providers or repository
end note

footer Facade · GoF Structural · NurFlac

@enduml
